# diyflight

./: .gitignore  README.md
p0-blinky/: Cargo.toml
p0-blinky/.cargo/: config.toml
p0-blinky/src/: main.rs
p1-usbserial-logging/: Cargo.toml  Makefile
p1-usbserial-logging/.cargo/: config.toml
p1-usbserial-logging/src/: main.rs
p2-gps-read/: Cargo.toml  Makefile
p2-gps-read/.cargo/: config.toml
p2-gps-read/src/: main.rs
p3-speedybee-f405-v4/: Cargo.toml  Makefile
p3-speedybee-f405-v4/src/: main.rs
part1-microcontroller/: Cargo.toml  Makefile
part1-microcontroller/src/: main.rs
part2-externalleds/: Cargo.toml  Makefile
part2-externalleds/src/: main.rs
part3-batteryvoltage/: Cargo.toml
part3-batteryvoltage/src/: main.rs
