[package]
name = "spbee_blinky"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [
  "stm32f411ce",
  "unstable-pac",
  "memory-x",
  "time-driver-tim4",
  "exti",
  "chrono",
] }
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3.2"

[profile.release]
codegen-units = 1
debug = 2
lto = 'fat'
opt-level = 's'
